Remove current dark mode
Revert "Messaging: fix the fix and unify alert and normal dialog styles"
This reverts commit fbd2cb38bb9788cb23578df3c55e67e146c6a939.

Revert "Messaging: fix dark mode ExpandableListView e.g. vcf card attachment"
This reverts commit ad0da7b36689b42e50cf8d396763d596e4c42a54.

Revert "Messaging: fix dark theme of settings dialogs"
This reverts commit fe950162c487e6524d099ea17138128c420535f8.

Revert "Dark theme: Clean up"
This reverts commit 8df5458e70974c583acc8b747afea51a6d47f7d8.

Revert "Messaging: add night mode"
This reverts commit 669552554207135f7850d780796c80050a5a3d39.

Change-Id: Iacb115aaa56493f432608c6f49ce0d80f9cb21b8

--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -33,25 +33,11 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
          <item name="android:dropDownListViewStyle">@style/DropDownListViewStyle</item>
          <item name="colorPrimary">@color/action_bar_background_color</item>
-         <item name="colorPrimaryDark">@color/action_bar_background_color</item>
+         <item name="colorPrimaryDark">@color/action_bar_background_color_dark</item>
          <item name="colorAccent">@color/lineage_accent</item>
          <item name="android:textColorHighlight">@color/text_highlight_color</item>
          <item name="actionBarStyle">@style/BugleActionBar</item>
          <item name="apnPreferenceStyle">@style/ApnPreference</item>
-         <item name="android:listViewStyle">@style/ListViewStyle</item>
-         <item name="actionBarPopupTheme">@style/PopupMenuStyleAppCompat</item>
-         <item name="android:actionBarPopupTheme">@style/PopupMenuStyleAppCompat</item>
-         <item name="alertDialogTheme">@style/BugleThemeAlertDialog</item>
-         <item name="android:alertDialogTheme">@style/BugleThemeAlertDialog</item>
-    </style>
-
-    <style name="ListViewStyle" parent="@android:style/Widget.Material.Light.ListView">
-        <item name="android:overScrollMode">always</item>
-        <item name="android:textColor">@color/message_title_text</item>
-        <item name="android:background">@color/contextual_action_bar_background_color</item>
-    </style>
-
-    <style name="PopupMenuStyleAppCompat" parent="@android:style/Theme.DeviceDefault.Light.Dialog">
     </style>
 
     <style name="BugleTheme.ConversationActivity"
@@ -67,32 +53,19 @@
     </style>
 
     <style name="BugleTheme.DialogActivity" parent="@style/Theme.AppCompat.Light.Dialog">
-        <item name="android:colorAccent">@color/primary_color</item>
-        <item name="android:colorPrimary">@color/archived_conversation_action_bar_background_color</item>
-        <item name="android:colorPrimaryDark">@color/archived_conversation_action_bar_background_color</item>
-        <item name="android:background">@color/contextual_action_bar_background_color</item>
-    </style>
-
-    <style name="BugleThemeDialog" parent="BugleTheme.DialogActivity">
-    </style>
-
-    <style name="BugleThemeAlertDialog" parent="@style/Theme.AppCompat.Light.Dialog.Alert">
-        <item name="android:colorAccent">@color/primary_color</item>
-        <item name="android:colorPrimary">@color/archived_conversation_action_bar_background_color</item>
-        <item name="android:colorPrimaryDark">@color/archived_conversation_action_bar_background_color</item>
-        <item name="android:background">@color/contextual_action_bar_background_color</item>
     </style>
 
     <style name="BugleTheme.ConversationListActivity" parent="BugleTheme">
-        <item name="android:windowBackground">@color/contextual_action_bar_background_color</item>
+        <item name="android:windowBackground">@android:color/background_light</item>
     </style>
 
     <style name="BugleTheme.ArchivedConversationListActivity" parent="BugleTheme.ConversationListActivity">
         <item name="colorPrimary">@color/archived_conversation_action_bar_background_color</item>
-        <item name="colorPrimaryDark">@color/archived_conversation_action_bar_background_color</item>
+        <item name="colorPrimaryDark">@color/archived_conversation_action_bar_background_color_dark</item>
     </style>
 
     <style name="BugleTheme.SettingsActivity" parent="BugleTheme">
+        <item name="android:textSize">@dimen/settings_list_text_size</item>
     </style>
 
     <style name="Invisible" parent="BugleBaseTheme">
@@ -497,6 +470,18 @@
     <style name="ApnPreferenceLayoutStyle">
         <item name="android:paddingLeft">?android:attr/listPreferredItemPaddingStart</item>
         <item name="android:paddingRight">?android:attr/listPreferredItemPaddingEnd</item>
+    </style>
+
+    <style name="SettingsListItem">
+        <item name="android:textSize">@dimen/settings_list_text_size</item>
+        <item name="android:textColor">@color/settings_list_text_primary</item>
+        <item name="android:background">@null</item>
+    </style>
+
+    <style name="SettingsListItemDetail">
+        <item name="android:textSize">@dimen/settings_list_detail_text_size</item>
+        <item name="android:textColor">@color/settings_list_text_secondary</item>
+        <item name="android:background">@null</item>
     </style>
 
     <style name="GroupMmsSettingItem">
