--- a/res/layout/settings_item_view.xml
+++ b/res/layout/settings_item_view.xml
@@ -18,11 +18,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:layout_height="@dimen/settings_list_item_height"
     android:gravity="center_vertical"
-    android:paddingStart="?android:attr/listPreferredItemPaddingStart"
-    android:paddingEnd="?android:attr/listPreferredItemPaddingEnd"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:background="?android:attr/selectableItemBackground" >
 
     <TextView
@@ -32,7 +31,7 @@
         android:singleLine="true"
         android:maxLines="1"
         android:ellipsize="end"
-        android:textAppearance="?android:attr/textAppearanceListItem" />
+        style="@style/SettingsListItem" />
 
     <TextView
         android:id="@+id/subtitle"
@@ -40,7 +39,6 @@
         android:layout_height="wrap_content"
         android:maxLines="2"
         android:ellipsize="end"
-        android:textAppearance="?android:attr/textAppearanceListItemSecondary"
-        android:textColor="?android:attr/textColorSecondary" />
+        style="@style/SettingsListItemDetail" />
 
 </LinearLayout>
