--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -20,6 +20,11 @@
         <item name="android:colorEdgeEffect">@color/conversation_edge_effect</item>
     </style>
 
+    <style name="BugleTheme.DialogActivity" parent="@style/Theme.AppCompat.Light.Dialog">
+        <item name="android:windowNoTitle">false</item>
+        <item name="android:background">@android:color/white</item>
+    </style>
+
     <style name="ContactListItemDrawableIndicator">
         <item name="android:background">?android:attr/selectableItemBackgroundBorderless</item>
     </style>
