--- a/res/values-night/colors.xml
+++ b/res/values-night/colors.xml
@@ -18,6 +18,6 @@
     <color name="lineage_accent">@*android:color/system_accent1_100</color>
     <color name="msg_bubble_input_bg">@*android:color/system_neutral1_800</color>
     <color name="window_background">@*android:color/system_neutral1_900</color>
-
     <color name="compose_send_text_background_color">@*android:color/system_neutral1_600</color>
+    <color name="window_background_inverse_color">@*android:color/system_neutral1_0</color>
 </resources>
