--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -84,23 +84,23 @@
     <color name="contact_list_text_primary">#4d4d4d</color>
     <color name="contact_list_text_secondary">#999999</color>
 
-    <color name="compose_contact_text">@android:color/white</color>
+    <color name="compose_contact_text">@*android:color/system_accent1_10</color>
     <color name="compose_contact_faint_text">#a0ffffff</color>
     <color name="compose_contact_divider">#44000000</color>
     <color name="contact_picker_tab_pressed">#ddffffff</color>
     <color name="contact_picker_tab_underline">@android:color/white</color>
     <color name="contact_list_alphabet_header">@color/lineage_accent</color>
-    <color name="contact_picker_background">#ffffff</color>
+    <color name="contact_picker_background">@color/window_background</color>
     <color name="chips_dropdown_background_activated">#4285f4</color>
     <color name="chips_dropdown_background_pressed">#ededed</color>
     <color name="chips_background_color">#33000000</color>
-    <color name="chips_text_color">@android:color/white</color>
+    <color name="chips_text_color">@*android:color/system_accent1_10</color>
 
     <color name="camera_button_container_background">#80000000</color>
 
     <color name="translucent_white">#80ffffff</color>
 
-    <color name="gallery_image_default_background">#eeeeee</color>
+    <color name="gallery_image_default_background">@color/window_background</color>
     <color name="gallery_image_pressed">#6733b5e5</color>
     <color name="attachment_preview_more_items_text_background">#44000000</color>
 
@@ -119,7 +119,8 @@
         <item>@*android:color/system_accent3_600</item>
     </array>
 
-    <color name="letter_tile_font_color">#ffffff</color>
+    <color name="window_background_inverse_color">@*android:color/system_neutral1_900</color>
+    <color name="letter_tile_font_color">@*android:color/system_accent1_10</color>
 
     <color name="audio_picker_level_primary_color">#29000000</color>
     <color name="audio_record_control_button_stroke">#30000000</color>
@@ -156,10 +157,10 @@
 
     <color name="sim_selector_text_primary">#4d4d4d</color>
     <color name="sim_selector_text_secondary">#999999</color>
-    <color name="sim_selector_background_end">#cceeeeee</color>
-    <color name="sim_selector_background_start">#ffeeeeee</color>
-    <color name="sim_indicator_color_light">#ffffff</color>
-    <color name="sim_indicator_color_dark">#323232</color>
+    <color name="sim_selector_background_end">@color/window_background</color>
+    <color name="sim_selector_background_start">@color/window_background</color>
+    <color name="sim_indicator_color_light">@color/window_background</color>
+    <color name="sim_indicator_color_dark">@color/window_background_inverse_color</color>
 
     <color name="text_highlight_color">@android:color/system_accent1_100</color>
     <color name="search_view_text_cursor">#b0dddddd</color>
@@ -175,17 +176,17 @@
     <color name="contact_picker_button_text_color">@color/primary_color</color>
 
     <color name="widget_text_color">#424242</color>
-    <color name="widget_incoming_text_color">@android:color/white</color>
-    <color name="widget_outgoing_text_color">#424242</color>
-    <color name="widget_background_color">#ffffff</color>
+    <color name="widget_incoming_text_color">@*android:color/system_accent1_10</color>
+    <color name="widget_outgoing_text_color">@*android:color/system_accent1_800</color>
+    <color name="widget_background_color">@*android:color/system_neutral1_50</color>
     <color name="ripple_material_light">#40000000</color>
     <color name="widget_conversation_title_color">#FFFFFF</color>
 
-    <color name="attachment_chooser_audio_background">#eeeeee</color>
-    <color name="attachment_chooser_vcard_background">#eeeeee</color>
+    <color name="attachment_chooser_audio_background">@color/window_background</color>
+    <color name="attachment_chooser_vcard_background">@color/window_background</color>
 
     <color name="fastscroll_track_color">#1e000000</color>
-    <color name="fastscroll_thumb_color">#42000000</color>
+    <color name="fastscroll_thumb_color">@color/lineage_accent</color>
     <color name="fastscroll_preview_text_color">#ffffff</color>
 
     <color name="google_gray">#F1F1F1</color>
