--- a/res/values/lineage_colors.xml
+++ b/res/values/lineage_colors.xml
@@ -22,5 +22,5 @@
     <color name="navigation_bar_bg">@color/window_background</color>
     <color name="navigation_bar_divider">@*android:color/transparent</color>
 
-    <color name="compose_send_text_background_color">@*android:color/system_neutral1_50</color>
+    <color name="compose_send_text_background_color">@android:color/white</color>
 </resources>
